--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -36,6 +36,7 @@ dependencies:
   crypto: ^3.0.1
   webview_flutter: ^3.0.0
   flutter_svg: ^1.0.1
+  flutter_settings_ui: ^2.0.1
 
   #State Management
   get: ^4.6.1
