fixees ampercent vehicle name bug.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   webview_flutter: ^3.0.0
   flutter_svg: ^1.0.1
   flutter_settings_ui: ^2.0.1
-
+  html_unescape: ^2.0.0
+  
   #State Management
   get: ^4.6.1
 
