--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^1.0.1
   flutter_settings_ui: ^2.0.1
   html_unescape: ^2.0.0
+  quick_actions: ^0.6.0+9
   
   #State Management
   get: ^4.6.1
