--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_settings_ui: ^2.0.1
   html_unescape: ^2.0.0
   quick_actions: ^0.6.0+9
+  package_info_plus: ^1.3.0
   
   #State Management
   get: ^4.6.1
