--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+13
+version: 1.0.0+14
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -32,6 +32,7 @@ dependencies:
 
   http: ^0.13.4
   json_annotation: ^4.4.0
+  shared_preferences: ^2.0.12
   flutter_secure_storage: ^5.0.2
   crypto: ^3.0.1
   webview_flutter: ^3.0.0
