--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   quick_actions: ^0.6.0+9
   package_info_plus: ^1.3.0
   numberpicker: ^2.1.1
+  intl: ^0.17.0
 
   #Storage
   shared_preferences: ^2.0.12
