--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icons/app-logo.png"
+  remove_alpha_ios: true
 
 
 # For information on the generic Dart part of this file, see the
