--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.capitan.deart">
 
    <uses-permission android:name="android.permission.INTERNET"/>
+   <uses-permission android:name="com.android.vending.BILLING"/>
 
    <application
         android:label="DearT"
