--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+26
+version: 1.0.0+30
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -47,6 +47,9 @@ dependencies:
   #Storage
   shared_preferences: ^2.0.12
   flutter_secure_storage: ^5.0.2
+
+  #In App Purchases
+  in_app_purchase: ^2.0.1
   
   #State Management
   get: ^4.6.1
