--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+31
+version: 1.0.0+33
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -95,16 +95,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
-    - assets/images/model3_black_black_uv.png
-    - assets/images/model3_black_white_uv.png
-    - assets/images/model3_blue_black_uv.png
-    - assets/images/model3_blue_white_uv.png
-    - assets/images/model3_gray_black_uv.png
-    - assets/images/model3_gray_white_uv.png
-    - assets/images/model3_red_black_uv.png
-    - assets/images/model3_red_white_uv.png
-    - assets/images/model3_white_black_uv.png
-    - assets/images/model3_white_white_uv.png
+    # - assets/images/model3_black_black_uv.png
+    # - assets/images/model3_black_white_uv.png
+    # - assets/images/model3_blue_black_uv.png
+    # - assets/images/model3_blue_white_uv.png
+    # - assets/images/model3_gray_black_uv.png
+    # - assets/images/model3_gray_white_uv.png
+    # - assets/images/model3_red_black_uv.png
+    # - assets/images/model3_red_white_uv.png
+    # - assets/images/model3_white_black_uv.png
+    # - assets/images/model3_white_white_uv.png
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
 
