--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+34
+version: 1.0.0+35
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -95,6 +95,23 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/heaters/base.png
+    - assets/images/heaters/FL1.png
+    - assets/images/heaters/FL2.png
+    - assets/images/heaters/FL3.png
+    - assets/images/heaters/FR1.png
+    - assets/images/heaters/FR2.png
+    - assets/images/heaters/FR3.png
+    - assets/images/heaters/RL1.png
+    - assets/images/heaters/RL2.png
+    - assets/images/heaters/RL3.png
+    - assets/images/heaters/RM1.png
+    - assets/images/heaters/RM2.png
+    - assets/images/heaters/RM3.png
+    - assets/images/heaters/RR1.png
+    - assets/images/heaters/RR2.png
+    - assets/images/heaters/RR3.png
+    - assets/images/heaters/wheel.png
     # - assets/images/model3_black_black_uv.png
     # - assets/images/model3_black_white_uv.png
     # - assets/images/model3_blue_black_uv.png
