--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   flutter_siri_suggestions: ^2.0.0
   web_socket_channel: ^2.1.0
+  timeago: ^3.2.2
 
   #Storage
   shared_preferences: ^2.0.12
@@ -95,6 +96,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/controls/base.png
     - assets/images/heaters/base.png
     - assets/images/heaters/FL1.png
     - assets/images/heaters/FL2.png
