--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+36
+version: 1.0.0+38
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -44,16 +44,23 @@ dependencies:
   flutter_siri_suggestions: ^2.0.0
   web_socket_channel: ^2.1.0
   timeago: ^3.2.2
+  uuid: ^3.0.6
 
-  #Storage
+  # Storage
   shared_preferences: ^2.0.12
   flutter_secure_storage: ^5.0.2
 
-  #In App Purchases
+  # In App Purchases
   in_app_purchase: ^2.0.1
   
-  #State Management
+  # State Management
   get: ^4.6.1
+
+  # Location And Maps
+  geolocator: ^8.2.0
+  platform_maps_flutter: ^1.0.2
+  apple_maps_flutter: ^1.1.0
+  google_maps_flutter: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
